--- a/index.html
+++ b/index.html
@@ -1,41 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GOogle HOMEPAGE</title>
+  <link rel="stylesheet" href="./all.min.css">
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="nav-bar">
-      <a href="#">Gmail</a>
-      <a href="#">images</a>
-      <i id="dropdown-menu" class="material-icons">apps</i>
-      <img class="user-img" src="./images/‏‏IMG-20190126-WA0009 - نسخة.jpg" alt="">
-    </div>
-   
+      <div>
+        <a href="#">gmail</a>
+      </div>
 
+      <div>
+        <a href="#">images</a>
+      </div>
+      <div>
+        <i id="dropdown-menu" class="material-icons">apps</i>
+      </div>
+      <div>
+        <img class="user-img" src="./images/‏‏IMG-20190126-WA0009 - نسخة.jpg" alt="">
+      </div>
+
+    </div>
   </header>
-  
+
   <main>
     <div class="main-section">
-        
-      <img class ='google' src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="">
-
-      <div id = "input-wrapper">
-        <input class = "search-box" type="text">
-        <img class="microphone" src="https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png" alt="">
+      <div>
+        <img class='google' src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+        alt="">
       </div>
-       <div class="btns">
+      
+
+      <div id="input-wrapper">
+          <input class="search-box" type="text" placeholder="search google or type  URL">
+          <img class="microphone" src="https://www.gstatic.com/images/branding/googlemic/2x/googlemic_color_24dp.png"
+          alt="">
+          <i class="fas fa-search"></i>
+      </div>
+
+      <div class="btns">
         <button class="btn">google search</button>
         <button class="btn">i'm feeling lucky</button>
-       </div>
+      </div>
     </div>
   </main>
-  
+
 
   </div>
 </body>
+
 </html>
