--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GOogle HOMEPAGE</title>
-  <link rel="stylesheet" href="./all.min.css">
+  <script src="https://kit.fontawesome.com/f20e57f399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
